agrego archivo de configuracion

--- a/ObiWan/qml.qrc
+++ b/ObiWan/qml.qrc
@@ -4,5 +4,6 @@
         <file>qtquickcontrols2.conf</file>
         <file>NewJobDialog.qml</file>
         <file>ObiCalendar.qml</file>
+        <file>config.ini</file>
     </qresource>
 </RCC>
